force-app/main/default/objects/EntityMapping__mdt/fields/Validate_Maxlength_Msg__c.field-meta.xml
<CustomField>
    <fullName>Validate_Maxlength_Msg__c</fullName>
    <label>Validate_Maxlength_Msg</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Data too long</fullName>
                
                    <default>true</default>
                
                    <label>Data too long</label>
                
                </value>
            
                <value>
                
                    <fullName>Please only enter up to 4 characters.</fullName>
                
                
                    <label>Please only enter up to 4 characters.</label>
                
                </value>
            
                <value>
                
                    <fullName>Please enter less than 5 characters.</fullName>
                
                
                    <label>Please enter less than 5 characters.</label>
                
                </value>
            
                <value>
                
                    <fullName>Please enter less than 2 characters.</fullName>
                
                
                    <label>Please enter less than 2 characters.</label>
                
                </value>
            
                <value>
                
                    <fullName>Please enter less than 25 characters.</fullName>
                
                
                    <label>Please enter less than 25 characters.</label>
                
                </value>
            
                <value>
                
                    <fullName>Please enter less than 1 characters.</fullName>
                
                
                    <label>Please enter less than 1 characters.</label>
                
                </value>
            
                <value>
                
                    <fullName>Only a maximum of {x} characters allowed</fullName>
                
                
                    <label>Only a maximum of {x} characters allowed</label>
                
                </value>
            
                <value>
                
                    <fullName>Please only enter up to 1 characters.</fullName>
                
                
                    <label>Please only enter up to 1 characters.</label>
                
                </value>
            
                <value>
                
                    <fullName>Please only enter up to 9 characters.</fullName>
                
                
                    <label>Please only enter up to 9 characters.</label>
                
                </value>
            
                <value>
                
                    <fullName>Please only enter up to 10 characters.</fullName>
                
                
                    <label>Please only enter up to 10 characters.</label>
                
                </value>
            
                <value>
                
                    <fullName>Please only enter up to 11 characters.</fullName>
                
                
                    <label>Please only enter up to 11 characters.</label>
                
                </value>
            
                <value>
                
                    <fullName>Please only enter up to {x} characters</fullName>
                
                
                    <label>Please only enter up to {x} characters</label>
                
                </value>
            
                <value>
                
                    <fullName>Please enter a valid Card Number with 13 characters.</fullName>
                
                
                    <label>Please enter a valid Card Number with 13 characters.</label>
                
                </value>
            
                <value>
                
                    <fullName>Please enter a valid Number with a maximum of 12 characters.</fullName>
                
                
                    <label>Please enter a valid Number with a maximum of 12 characters.</label>
                
                </value>
            
                <value>
                
                    <fullName>Please only enter 4-17 characters</fullName>
                
                
                    <label>Please only enter 4-17 characters</label>
                
                </value>
            
                <value>
                
                <fullName>Please only enter up to 5 characters.</fullName>
                
                
                <label>Please only enter up to 5 characters.</label>
                
            </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>