force-app/main/default/objects/EntityMapping__mdt/fields/Validate_Minlength__c.field-meta.xml
<CustomField>
    <fullName>Validate_Minlength__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to validate minimum length of input value</description>
    <label>Validate_Minlength</label>
    <type>Checkbox</type>
</CustomField>