force-app/main/default/objects/EntityMapping__mdt/fields/Validate_Minlength_Msg__c.field-meta.xml
<CustomField>
    <fullName>Validate_Minlength_Msg__c</fullName>
    <label>Validate_Minlength_Msg</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Data too short</fullName>
                <default>true</default>
                <label>Data too short</label>
            </value>
            <value>
                <fullName>Please enter a valid Number with a maximum of 12 characters.</fullName>
            </value>
            <value>
                <fullName>Please only enter 4-17 characters.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>