force-app/main/default/objects/EntityMapping__mdt/fields/Validate_Phone_Pattern__c.field-meta.xml
<CustomField>
    <fullName>Validate_Phone_Pattern__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Validate phone pattern validation</description>
    <label>Validate_Phone_Pattern</label>
    <type>Checkbox</type>
</CustomField>