force-app/main/default/objects/EntityMapping__mdt/fields/Validate_Phone_Pattern_Msg__c.field-meta.xml
<CustomField>
    <fullName>Validate_Phone_Pattern_Msg__c</fullName>
    <label>Validate_Phone_Pattern_Msg</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Please enter phone number in correct format</fullName>
                
                    <default>true</default>
                
                    <label>Please enter phone number in correct format</label>
                
                </value>
            
                <value>
                
                    <fullName>Please enter a valid 10-digit number in the following format: 123-456-7890</fullName>
                
                
                    <label>Please enter a valid 10-digit number in the following format: 123-456-7890</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>