force-app/main/default/objects/EntityMapping__mdt/listViews/All_Values.listView-meta.xml
<ListView>
    <fullName>All_Values</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>ScreenName__c</columns>
    <columns>SF_FieldAPI__c</columns>
    <columns>SF_ObjectAPI__c</columns>
    <columns>Programs__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Values</label>
    <language>en_US</language>
</ListView>